Live Pricing Set up